--- a/14.html
+++ b/14.html
@@ -14,6 +14,16 @@
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://example.com/images/buku-terlaris.jpg">
     <meta name="robots" content="index, follow">
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '0cfd3aa635d270e67b5af101e4d64321',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//padsims.com/0cfd3aa635d270e67b5af101e4d64321/invoke.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
