--- a/2.html
+++ b/2.html
@@ -15,6 +15,16 @@
     <meta property="og:image" content="https://example.com/images/adam-driver-journey.jpg">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css"> </head>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '0cfd3aa635d270e67b5af101e4d64321',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//padsims.com/0cfd3aa635d270e67b5af101e4d64321/invoke.js"></script>
 <body>
     <header>
         <h1>The Transformation of Adam Driver: From Military Service to Hollywood Star</h1>
