--- a/1.html
+++ b/1.html
@@ -53,6 +53,16 @@
                 <p>This pivotal experience shaped his worldview and instilled in him a discipline and intensity that would later translate into his powerful performances. Reflecting on his time in the Marines, Driver has often spoken about the camaraderie and the profound impact it had on his understanding of human connection and purpose.</p>
                 <p>Following his military service, Driver found his calling in the arts. He pursued his passion for acting at the prestigious Juilliard School in New York City, where he honed his craft and developed the skills necessary to tackle complex and nuanced characters. His training at Juilliard provided him with a strong foundation in theater, which remains an important aspect of his artistic identity.</p>
             </section>
+		<script type="text/javascript">
+	atOptions = {
+		'key' : '0cfd3aa635d270e67b5af101e4d64321',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//padsims.com/0cfd3aa635d270e67b5af101e4d64321/invoke.js"></script>
 
             <section id="breakthrough-roles">
                 <h2>Breakthrough Performances and Early Recognition</h2>
